Added initial index.html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h1>COMP 3020 Group 6 Milestone 3</h1>
-        <p>Care Rental Website.</p>
+        <p>Car Rental Website.</p>
     </body>
 </html>
