Messing around with random stuff, ignore just practicing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Car Rental Site</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="style.css">
+    </head>
+
     <body>
-        <h1>COMP 3020 Group 6 Milestone 3</h1>
-        <p>Car Rental Website.</p>
+        <h1>CAR RENTAL</h1>
+        <h2 title="Summary">Car Rental Website to help customers find their perfect rental vehicle.</h2>
+
+        <div id="first">
+            <h2>Testing divs</h2>
+            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+            <h5>hello</h5>
+        </div>
+
+        <div id="second">
+            <h3>Testing stuff</h3>
+            <h2>Header 2</h2>
+        </div>
+
     </body>
 </html>
