vehicle scroll page started

--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     </head>
 
     <body>
-        <h1>CAR RENTAL</h1>
-        <h2 title="Summary">Car Rental Website to help customers find their perfect rental vehicle.</h2>
+        <br/>
+        <div id ="progress_bar">
 
-        <div id="first">
-            <h2>Testing divs</h2>
-            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-            <h5>hello</h5>
         </div>
-
-        <div id="second">
-            <h3>Testing stuff</h3>
-            <h2>Header 2</h2>
+        <br/>
+        <div id="middle_scroll">
+            <!-- cars go here, javascript to flip between cars/insurance/add-ons -->
+             <div id="vehicle_item"></div>
+             <div id="vehicle_item"></div>
+             <div id="vehicle_item"></div>
+             <div id="vehicle_item"></div>
         </div>
 
     </body>
