book button added and adding details within each vehicle item space

--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
 
     <body>
         <br/>
-        <div id ="progress_bar">
+        <div id="header">
+            <div id="logo_border">
+                <h1 id="logo">Car Rental</h1>
+            </div>
+            <div id="progress_bar">
 
+            </div>
         </div>
         <br/>
         <div id="middle_scroll">
             <!-- cars go here, javascript to flip between cars/insurance/add-ons -->
-             <div id="vehicle_item"></div>
-             <div id="vehicle_item"></div>
-             <div id="vehicle_item"></div>
-             <div id="vehicle_item"></div>
+             <div id="vehicle_item">
+                <img id="vehicle_img"; src = "car1.png";>
+                <button class="book_button">Book Now</button>
+                <h3 id="vehicle_name">2006 Acura RSX</h3>
+             </div>
+             <div id="vehicle_item">
+                <img id="vehicle_img"; src = "car1.png";>
+             </div>
+             <div id="vehicle_item">
+                <img id="vehicle_img"; src = "car1.png";>
+             </div>
+             <div id="vehicle_item">
+                <img id="vehicle_img"; src = "car1.png";>
+             </div>
         </div>
 
     </body>
