--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="main">
         <br/>
         <div id="header">
             <div id="logo_border">
