--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
              </div>
         </div>
         <script src="scripts/ProgressBar.js" type="text/javascript"></script>
-        <script src="scripts/Vehicle.js" ></script>
+        <script src="scripts/Vehicle.js"></script>
+        <script src="scripts/BookNowButton.js" ></script>
     </body>
 </html>
