--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </div>
         <div id="summary_div">
-            <h2 id="summary_vehicle">Selected Vehicle:</h2>
+            <h2 id="summary_vehicle">Summary</h2>
         </div>
         <script src="scripts/ProgressBar.js" type="text/javascript"></script>
         <script src="scripts/Vehicle.js"></script>
