--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br/>
         <div id="filter_div">
             <div id="price_filters">
-                
+
                 <label for="low_to_high"> 
                     <input type="radio" id="low_to_high" name="price_filter">
                     Low to High
@@ -53,7 +53,14 @@
             <h2 id="summary_vehicle">Summary</h2>
         </div>
         <script src="scripts/ProgressBar.js" type="text/javascript"></script>
+
+        <script src="scripts/Sedan.js"></script>
+
         <script src="scripts/Vehicle.js"></script>
+        <script src="scripts/VehicleInventory.js"></script>
+        
+        <script src="scripts/Main.js"></script>
+
         <script src="scripts/BookNowButton.js" ></script>
         <script src="scripts/Filters.js" ></script>
     </body>
