almost done summary

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <head>
         <title>Car Rental Site</title>
         <link rel="stylesheet" href="./styles/style-landing.css">
-        <link rel="stylesheet" href="./jquery-ui.css">
+        <link rel="stylesheet" href="./styles/jquery-ui.css">
     </head>
 
     <!--Dependencies for Datepicker Widget-->
