--- a/checkout.html
+++ b/checkout.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="./styles/style-landing.css">
     <link rel="stylesheet" href="./styles/jquery-ui.css">
 
+    <script src="scripts/Sedan.js"></script>
+    <script src="scripts/Truck.js"></script>
+    <script src="scripts/Vehicle.js"></script>
+    <script type="text/javascript" src="scripts/VehicleInventory.js"></script>
+    <script type="text/javascript" src="scripts/Cart.js"></script>
+    <script type="text/javascript" src="scripts/Main.js"></script>
+    <script type="text/javascript" src="scripts/Checkout.js"></script>
+
     <style>
         .centered-page {
             padding-left: 25%;
@@ -17,6 +25,7 @@
             border: solid 4px;
             height: fit-content;
         }
+
         .info-bubble {
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -31,7 +40,7 @@
     </style>
 </head>
 
-<body>
+<body onload="loadCheckOut()">
 
     <!--stolen from home-->
     <header>
@@ -50,18 +59,23 @@
 
 
     <!--Not stolen-->
-    <div style="padding-left: 25%; height: fit-content; border: 4px solid;">
+    <div style="padding-left: 25%; height: fit-content; border: 4px solid;" >
         <div style=" min-width: 300px; width: 66.6%; text-align: center; overflow: hidden; border:4px solid;">
             
             <h1 style="text-align:left">Checkout:</h1>
-            <div class="info-bubble">
+            <div class="info-bubble" id="summary">
                 <h2>Order Summary</h2>
                 <hr />
                 <p>
-                    checkout stuff
+                    <h3>Vehicle:</h3>
+                    <var id="vname">name</var>
+                    <br />
+                    <var id="vcolor">color</var>
+                    <br />
+                    <var id="vyear">year</var>
                 </p>
             </div>
-            <div class="info-bubble">
+            <div class="info-bubble" id="info" data->
                 <h2>Your Info</h2>
                 <hr />
                 <p>
