--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body id="main" onload="renderAllCars(), loadCart()" onunload="saveCart()">
+    <body id="main" onload="loadMain()" onunload="saveCart()">
+        
         <br />
         <div id="header_progress">
             <div id="progress_bar">
