refactored the surveypage.html
split the min html file for the survey page in a .html,.css and .js file, instead of cramming everything into one html file

--- a/surveyindex.html
+++ b/surveyindex.html
@@ -3,256 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Car Rental Survey</title>
-    <style>
-        /* Basic reset */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Set html and body height to 100% for vertical centering */
-        html, body {
-            height: 100%;
-        }
-
-        body {
-            display: flex;
-            justify-content: center; /* Horizontal centering */
-            align-items: center;     /* Vertical centering */
-            font-family: Arial, sans-serif;
-            background-color: #f9f3e5; /* Beige background */
-            padding: 20px;
-        }
-
-        /* Survey container */
-        .survey-container {
-            max-width: 1000px; /* Max width for the container */
-            width: 100%;
-            background: #f9f3e5; /* Beige background */
-            border: 3px solid #8b0000; /* Red border */
-            border-radius: 8px;
-            position: relative; /* For positioning child elements */
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            margin: 20px;
-            transition: height 0.3s ease; /* Smooth transition for height changes */
-        }
-
-        /* Survey steps */
-        .survey-step {
-            display: none;
-            padding: 60px 40px 40px; /* Added padding */
-        }
-
-        .survey-step.active {
-            display: block;
-        }
-
-        /* Skip button at top right corner */
-        .skip-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            border: none;
-            background: #8b0000; /* Red background */
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background 0.3s, transform 0.3s;
-            z-index: 10; /* Ensure the skip button stays on top */
-        }
-
-        .skip-button:hover {
-            background: #a60000; /* Darker red on hover */
-            transform: scale(1.05); /* Slight zoom on hover */
-        }
-
-        /* Question styles */
-        .question {
-            margin-bottom: 20px;
-        }
-
-        .question h2 {
-            margin-bottom: 10px;
-            color: #8b0000; /* Red text for headings */
-        }
-
-        /* Intro step styles */
-        .intro-content {
-            text-align: center;
-            color: #333;
-        }
-
-        .intro-content h1 {
-            color: #8b0000; /* Red text for the main heading */
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-
-        .intro-content p {
-            font-size: 20px;
-            margin-bottom: 40px;
-            line-height: 1.5;
-        }
-
-        /* Option styles */
-        .options {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px; /* Increased gap for better spacing */
-            justify-content: center; /* Center options horizontally */
-        }
-
-        .option {
-            flex: 1 1 calc(25% - 40px); /* Adjusted to show more options per row */
-            background: #e0d9c8; /* Lighter beige for options */
-            padding: 20px;
-            text-align: center;
-            border-radius: 5px;
-            cursor: pointer;
-            position: relative;
-            transition: transform 0.3s, background 0.3s;
-            border: 2px solid #8b0000; /* Red border */
-            max-width: 250px;
-        }
-
-        .option:hover {
-            transform: scale(1.05);
-            background: #d3c7b3;
-        }
-
-        .option.selected {
-            background: #8b0000;
-            color: #fff;
-        }
-
-        /* Option text */
-        .option span {
-            display: block;
-            margin-top: 10px;
-            font-size: 16px;
-            font-weight: bold;
-        }
-
-        /* Navigation buttons */
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 30px;
-        }
-
-        .navigation button {
-            padding: 10px 20px;
-            border: none;
-            background: #8b0000; /* Red background for buttons */
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background 0.3s, transform 0.3s;
-        }
-
-        .navigation button:hover {
-            background: #a60000;
-            transform: scale(1.1);
-        }
-
-        /* Start button */
-        .start-button {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            background: #8b0000;
-            color: #fff;
-            border: none;
-            border-radius: 0 0 8px 8px;
-            cursor: pointer;
-            font-size: 18px;
-            font-weight: bold;
-            transition: background 0.3s, transform 0.3s;
-        }
-
-        .start-button:hover {
-            background: #a60000;
-            transform: scale(1.05);
-        }
-
-        /* Graphics */
-        .option img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-            border-radius: 5px;
-        }
-
-        /* Force images to have consistent height */
-        .option img {
-            height: 100px;
-            object-fit: contain;
-        }
-
-        /* Input field styles */
-        .options input[type="text"], .options select {
-            width: 100%;
-            padding: 15px;
-            font-size: 16px;
-            border: 2px solid #8b0000;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            background-color: #f9f3e5;
-            color: #333;
-            transition: background 0.3s, border 0.3s;
-            cursor: pointer;
-        }
-
-        .options select:hover {
-            background-color: #e0d9c8;
-        }
-
-        .options select:focus {
-            outline: none;
-            border-color: #a60000;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 1200px) {
-            .option {
-                flex: 1 1 calc(33.333% - 40px);
-            }
-        }
-
-        @media (max-width: 900px) {
-            .option {
-                flex: 1 1 calc(50% - 40px);
-            }
-        }
-
-        @media (max-width: 600px) {
-            .option {
-                flex: 1 1 calc(100% - 40px);
-            }
-
-            .intro-content h1 {
-                font-size: 28px;
-            }
-
-            .intro-content p {
-                font-size: 18px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="surveystyles.css"> <!-- Link to CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> <!-- Google Fonts -->
 </head>
 <body>
 
 <div class="survey-container" id="surveyContainer">
-    <!-- Skip Button -->
     <button class="skip-button" onclick="skipSurvey()">Skip</button>
 
-    <!-- Start Survey Page -->
     <div class="survey-step active" id="step-intro">
         <div class="intro-content">
             <h1>Discover Your Ideal Rental Car</h1>
@@ -591,7 +349,8 @@
         </div>
     </div>
 
-    <!-- Survey Completion -->
+    <!-- Add other survey steps -->
+
     <div class="survey-step" id="step-complete">
         <h1 style="color: #8b0000;">Thank You!</h1>
         <p>Your preferences have been recorded.</p>
@@ -599,90 +358,6 @@
     </div>
 </div>
 
-<script>
-    let currentStep = 0;
-    const steps = document.querySelectorAll('.survey-step');
-    const surveyContainer = document.getElementById('surveyContainer');
-    const surveyData = {
-        features: []
-    };
-
-    function updateSurveyHeight() {
-        const activeStep = document.querySelector('.survey-step.active');
-        if (activeStep) {
-            const stepHeight = activeStep.scrollHeight;
-            surveyContainer.style.height = `${stepHeight + 40}px`; // Add padding for better spacing
-        }
-    }
-
-    function showStep(step) {
-        steps.forEach((s, index) => {
-            s.classList.toggle('active', index === step);
-        });
-        currentStep = step;
-        updateSurveyHeight();
-    }
-
-    function nextStep() {
-        if (currentStep < steps.length - 1) {
-            showStep(currentStep + 1);
-        } else {
-            // If it's the last step, show the completion step
-            showStep(steps.length - 1);
-        }
-    }
-
-    function prevStep() {
-        if (currentStep > 0) {
-            showStep(currentStep - 1);
-        }
-    }
-
-    function selectOption(element, questionKey, value) {
-        const options = element.parentElement.querySelectorAll('.option');
-        options.forEach(opt => opt.classList.remove('selected'));
-
-        element.classList.add('selected');
-        surveyData[questionKey] = value;
-
-        console.log(surveyData);
-    }
-
-    function toggleOption(element, questionKey, value) {
-        element.classList.toggle('selected');
-
-        if (!surveyData[questionKey]) {
-            surveyData[questionKey] = [];
-        }
-
-        if (element.classList.contains('selected')) {
-            surveyData[questionKey].push(value);
-        } else {
-            surveyData[questionKey] = surveyData[questionKey].filter(item => item !== value);
-        }
-
-        console.log(surveyData);
-    }
-
-    function saveInput(questionKey, value) {
-        surveyData[questionKey] = value;
-        console.log(surveyData);
-    }
-
-    function skipSurvey() {
-        window.location.href = "car-options.html"; // Redirect to the car options page
-    }
-
-    function submitSurvey() {
-        // Process the surveyData object as needed
-        console.log("Survey completed:", surveyData);
-        window.location.href = "car-options.html";
-    }
-
-    // Initialize the height adjustment
-    updateSurveyHeight();
-    window.addEventListener('resize', updateSurveyHeight); // Recalculate height on window resize
-</script>
-
+<script src="surveyscript.js"></script> <!-- Link to JavaScript -->
 </body>
 </html>
