Minor bug fixes, date picker autofils if you had previously selected one and there is no longer a js error on home page for trying to load vehicles when it doesnt need to

--- a/home.html
+++ b/home.html
@@ -10,6 +10,12 @@
     <script src="./scripts/jquery-3.7.1.js"></script>
     <script src="./scripts/jquery-ui.js"></script>
 
+
+    <script src="scripts/Sedan.js"></script>
+    <script src="scripts/Truck.js"></script>
+    <script src="scripts/Vehicle.js"></script>
+    <script type="text/javascript" src="scripts/Addons.js"></script>
+    <script type="text/javascript" src="scripts/Insurance.js"></script>
     <script src="scripts/VehicleInventory.js"></script>
     <script src="scripts/Cart.js"></script>
     <script src="scripts/Main.js"></script>
